Fixes QTreeView: stylesheet :has-children pseudo selector doesn't works for the ::item pseudo-class

The State_Children was not set on the QStyleOption.
Refactorized a little bit the way it was computed.

Reviewed-by: Thierry
Task-number: 234930
Task-number: QTBUG-3129